test/error/0016-arrayinitsize.c
/*
PATTERN: incorrect
*/

int x[2] = {1, 2, 3};
